--- a/HotelManagement/Views/Booking/Index.cshtml
+++ b/HotelManagement/Views/Booking/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<HotelManagement.LoaiPhong>
+﻿@model IEnumerable<HotelManagement.Models.LoaiPhong>
 
 @{
     ViewBag.Title = "Index";
