--- a/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
             <li class="nav-item active">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRoom"
                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>    
+                    <i class="fas fa-fw fa-cog"></i>
                     <span>Room</span>
                 </a>
                 <div id="collapseRoom" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -66,19 +66,19 @@
                     </div>
                 </div>
             </li>
-            <li class="nav-item active"> 
+            <li class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "Admin/Guest", new { area = "" })">
                     <i class="fa-regular fa-users"></i>
                     <span>Guest</span>
                 </a>
             </li>
-            <li class="nav-item active"> 
+            <li class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "Admin/Staff", new { area = "" })">
                     <i class="fa-solid fa-user"></i>
                     <span>Staff</span>
                 </a>
             </li>
-            <li class="nav-item active"> 
+            <li class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "Admin/Service", new { area = "" })">
                     <i class="fa-solid fa-bell-concierge"></i>
                     <span>Service</span>
@@ -90,65 +90,12 @@
                     <span>Invoice</span>
                 </a>
             </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Interface
-            </div>
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                   aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
+            <li class="nav-item active">
+                <a class="nav-link" href="@Url.Action("Index", "Admin/RegistrationForm", new { area = "" })">
+                    <i class="fa-regular fa-calendar-lines-pen"></i>
+                    <span>Registration Form</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                     data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
-                    </div>
-                </div>
             </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Addons
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                   aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
-                </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Nav Item - Charts -->
-            
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -378,7 +325,7 @@
                 <!-- End of Topbar -->
                 <!-- Begin Page Content -->
                 <div class="render-body-section">
-                    @RenderBody();
+                    @RenderBody()
                 </div>
                 <!-- /.container-fluid -->
 
