--- a/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
@@ -51,9 +51,9 @@
                                     @Html.DisplayFor(modelItem => item.LoaiPhong.TenLoaiPhong)
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">@Html.DisplayFor(modelItem => item.MaPhong)</div>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.MaPhong }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.MaPhong }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.MaPhong })
+                                @Html.ActionLink("Edit", "Edit", new { id = item.MaPhong.Trim() }) |
+                                @Html.ActionLink("Details", "Details", new { id = item.MaPhong.Trim() }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = item.MaPhong.Trim() })
                             </div>
                             <div class="col-auto">
                                 <i class="fa-solid fa-circle-minus fa-2x text-gray-300"></i>
