change Create and Edit

--- a/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.HienTrang, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -32,7 +32,7 @@
                     @Html.ValidationMessageFor(model => model.HienTrang, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.MaLoaiPhong, "MaLoaiPhong", htmlAttributes: new { @class = "control-label col-md-2" })
