--- a/HotelManagement/Areas/Admin/Views/Guest/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Create.cshtml
@@ -56,13 +56,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.TenTaiKhoan, "TenTaiKhoan", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("TenTaiKhoan", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TenTaiKhoan, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
