--- a/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaPhong)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.HienTrang, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -25,7 +25,7 @@
                     @Html.ValidationMessageFor(model => model.HienTrang, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.MaLoaiPhong, "MaLoaiPhong", htmlAttributes: new { @class = "control-label col-md-2" })
