--- a/HotelManagement/Areas/Admin/Views/Staff/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Create.cshtml
@@ -51,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChucDanh, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ChucDanh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ChucDanh, new SelectList(new List<string> { "Nhân viên lễ tân", "Nhân viên phục vụ", "Nhân viên kế toán" }), null, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ChucDanh, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -59,7 +59,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TenTaiKhoan, "TenTaiKhoan", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TenTaiKhoan", null, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.TenTaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenTaiKhoan, "", new { @class = "text-danger" })
             </div>
         </div>
