change registration form option

--- a/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
@@ -61,7 +61,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TenTaiKhoan, "TenTaiKhoan", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TenTaiKhoan", null, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.TenTaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenTaiKhoan, "", new { @class = "text-danger" })
             </div>
         </div>
