--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelManagement.PhieuThue
+﻿﻿@model HotelManagement.PhieuThue
 
 @{
     ViewBag.Title = "Create";
@@ -8,10 +8,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>PhieuThue</h4>
         <hr />
@@ -34,10 +34,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaKhachHang, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.KhachHang.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MaKhachHang, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaKhachHang, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.KhachHang.SoDienThoai, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.KhachHang.SoDienThoai, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -49,7 +49,7 @@
     </div>
 
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 }
