--- a/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
@@ -52,6 +52,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.TaiKhoanNV.TenTaiKhoan)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TaiKhoanNV.TenTaiKhoan)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.TaiKhoanNV.MatKhau)
         </dt>
 
