--- a/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
@@ -52,19 +52,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TaiKhoanNV.TenTaiKhoan)
+            @Html.DisplayNameFor(model => model.TaiKhoanNVs.First().TenTaiKhoan)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TaiKhoanNV.TenTaiKhoan)
+            @Html.DisplayFor(model => model.TaiKhoanNVs.First().TenTaiKhoan)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TaiKhoanNV.MatKhau)
+            @Html.DisplayNameFor(model => model.TaiKhoanNVs.First().MatKhau)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TaiKhoanNV.MatKhau)
+            @Html.DisplayFor(model => model.TaiKhoanNVs.First().MatKhau)
         </dd>
 
     </dl>
