--- a/HotelManagement/Areas/Admin/Views/Guest/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Create.cshtml
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LoaiKhachHang, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.LoaiKhachHang, new SelectList(new List<string> { "Vip", ""}), null, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.LoaiKhachHang, new SelectList(new List<string> { "", "Vip"}), null, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LoaiKhachHang, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -55,14 +55,6 @@
                 @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.TenTaiKhoan, "TenTaiKhoan", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("TenTaiKhoan", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TenTaiKhoan, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
