--- a/HotelManagement/Areas/Admin/Views/Staff/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Create.cshtml
@@ -57,18 +57,18 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TenTaiKhoan, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TaiKhoanNVs.First().TenTaiKhoan, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TenTaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TenTaiKhoan, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.TaiKhoanNVs.First().TenTaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TaiKhoanNVs.First().TenTaiKhoan, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TaiKhoanNV.MatKhau, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TaiKhoanNVs.First().MatKhau, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TaiKhoanNV.MatKhau, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TaiKhoanNV.MatKhau, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.TaiKhoanNVs.First().MatKhau, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TaiKhoanNVs.First().MatKhau, "", new { @class = "text-danger" })
         </div>
     </div>
 
