fix create and edit guest

--- a/HotelManagement/Areas/Admin/Views/Guest/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Details.cshtml
@@ -51,13 +51,13 @@
             @Html.DisplayFor(model => model.SoDienThoai)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TaiKhoanKH.MatKhau)
+        @*<dt>
+            @Html.DisplayNameFor(model => model.)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TaiKhoanKH.MatKhau)
-        </dd>
+            @Html.DisplayFor(model => model.TaiKhoanKHs.MatKhau)
+        </dd>*@
 
     </dl>
 </div>
