--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
@@ -52,6 +52,13 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.KhachHang.SoDienThoai)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.KhachHang.SoDienThoai)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.NhanVien.CCCD)
         </dt>
 
