--- a/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LoaiKhachHang, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LoaiKhachHang, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.LoaiKhachHang, new SelectList(new List<string> { "Vip", "" }), null, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LoaiKhachHang, "", new { @class = "text-danger" })
             </div>
         </div>
