--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
@@ -7,6 +7,19 @@
 
 <h2>Index</h2>
 
+@using (Html.BeginForm("Search", "RegistrationForm", FormMethod.Get))
+{
+    <div class="input-group">
+        <div class="form-outline">
+
+            <label class="form-label" for="form1">Search</label>
+            @Html.TextBox("sdt", null, new { @class = "form-control" })
+        </div>
+
+        <input type="submit" value=" Tìm " name="name" />
+    </div>
+}
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -28,37 +41,44 @@
             @Html.DisplayNameFor(model => model.KhachHang.CCCD)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.KhachHang.SoDienThoai)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.NhanVien.CCCD)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NgayLap)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ThoiGianNhanPhong)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ThoiGianTraPhong)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HienTrang)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.KhachHang.CCCD)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NhanVien.CCCD)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MaPhieu }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MaPhieu }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MaPhieu })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.NgayLap)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ThoiGianNhanPhong)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ThoiGianTraPhong)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.HienTrang)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KhachHang.CCCD)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KhachHang.SoDienThoai)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NhanVien.CCCD)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.MaPhieu }) |
+                @Html.ActionLink("Details", "Details", new { id = item.MaPhieu }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.MaPhieu })
+            </td>
+        </tr>
+    }
 
 </table>
