--- a/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
@@ -12,11 +12,10 @@
     <div class="input-group">
         <div class="form-outline">
 
-            <label class="form-label" for="form1">Search</label>
-            @Html.TextBox("maPhong", null, new { @class = "form-control" })
+            @Html.TextBox("maPhong", null, new { @class = "form-control bg-light border-0 small" })
         </div>
 
-        <input type="submit" value=" Tìm " maPhong="maPhong" />
+        <input type="submit" value=" Tìm " maPhong="maPhong" class="btn btn-primary" />
     </div>
 }
 
