--- a/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
@@ -17,18 +17,19 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaPhong)
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.HienTrang, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.HienTrang,"Hiện trạng", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
+                    <span>Còn trống</span>
                     @Html.EditorFor(model => model.HienTrang)
                     @Html.ValidationMessageFor(model => model.HienTrang, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>*@
+        </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaLoaiPhong, "MaLoaiPhong", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaLoaiPhong, "Mã Loại Phòng", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })
