--- a/HotelManagement/Areas/Admin/Views/RoomType/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Create.cshtml
@@ -41,9 +41,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HinhAnh, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.HinhAnh, null,  new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HinhAnh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.HinhAnh, new { type = "file", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.HinhAnh, "", new { @class = "text-danger" })
             </div>
         </div>
