--- a/HotelManagement/Areas/Admin/Views/RoomType/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Edit.cshtml
@@ -37,7 +37,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.HinhAnh, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HinhAnh, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.HinhAnh, new { type = "file", @class = "form-control" })
+                <img src="~/Assets/admin/img/@Model.HinhAnh" style="width: 100px; margin-top: 16px" />
+                @Html.Hidden("oldimage", @Model.HinhAnh)
                 @Html.ValidationMessageFor(model => model.HinhAnh, "", new { @class = "text-danger" })
             </div>
         </div>
