--- a/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
@@ -12,11 +12,10 @@
     <div class="input-group">
         <div class="form-outline">
 
-            <label class="form-label" for="form1">Search</label>
-            @Html.TextBox("tenLP", null, new { @class = "form-control" })
+            @Html.TextBox("tenLP", null, new { @class = "form-control bg-light border-0 small" })
         </div>
 
-        <input type="submit" value=" Tìm " tenLP="tenLP" />
+        <input type="submit" value=" Tìm " tenLP="tenLP" class="btn btn-primary" />
     </div>
 }
 
@@ -48,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.GiaLoaiPhong)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.HinhAnh)
+                <img src="~/Assets/admin/img/@item.HinhAnh" style="width: 100px;" />
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.MaLoaiPhong.Trim() }) |
