--- a/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Index</h2>
 
-@using (Html.BeginForm("Search", "Room", FormMethod.Get))
+@using (Html.BeginForm("Search", "Room", FormMethod.Get, new { @class = "search-form" }))
 {
     <div class="input-group">
         <div class="form-outline">
