--- a/HotelManagement/Assets/admin/css/sb-admin-2.css
+++ b/HotelManagement/Assets/admin/css/sb-admin-2.css
@@ -6471,7 +6471,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fc !important;
+    background-color: #f0f2f9 !important
 }
 
 a.bg-light:hover, a.bg-light:focus,
