--- a/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -122,7 +122,6 @@
                     </button>
 
                     <!-- Topbar Search -->
-
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -364,6 +363,9 @@
     <script src="~/Assets/admin/vendor/jquery/jquery.min.js"></script>
     <script src="~/Assets/admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+
     <!-- Core plugin JavaScript-->
     <script src="~/Assets/admin/vendor/jquery-easing/jquery.easing.min.js"></script>
 
@@ -379,6 +381,10 @@
 
     <!--Custom js-->
     <script src="~/Assets/admin/js/script.js"></script>
+
+    <script src="~/Scripts/jquery.js"></script>
+    <script src="~/Scripts/jquery.validation.js"></script>
+    <script src="~/Scripts/jquery.validation.unobtrusive.js"></script>
 
 </body>
 
