--- a/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
@@ -31,7 +31,7 @@
 <table class="table">
     <tr>
         <th>
-            Họ và Tên
+            @Html.DisplayNameFor(model => model.TenKhachHang)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NgaySinh)
