--- a/HotelManagement/Areas/Admin/Views/Invoice/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Invoice/Index.cshtml
@@ -30,13 +30,13 @@
             @Html.DisplayNameFor(model => model.MaHoaDon)
         </th>
         <th>
-            Tên Khách hàng
+            @Html.DisplayNameFor(model => model.KhachHang.TenKhachHang);
         </th>
         <th>
-            Tổng tiền
+            Total Amount
         </th>
         <th>
-            Tên Nhân Viên
+            @Html.DisplayNameFor(model => model.NhanVien.TenNhanVien);
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NgayLapHoaDon)
