--- a/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Create.cshtml
@@ -35,7 +35,7 @@
         </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaLoaiPhong, "MaLoaiPhong", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })
