--- a/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.MaPhong)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HienTrang,"Hiện trạng", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.HienTrang, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
                     <span>Còn trống</span>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaLoaiPhong, "Mã Loại Phòng", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })
