change login route

--- a/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -353,7 +353,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a>@Html.ActionLink("Logout", "Index", "Home", new { area = "Admin" }, new { @class = "btn btn-primary" })</a>
+                    <a>@Html.ActionLink("Logout", "Index", "Login", new { area = "Admin" }, new { @class = "btn btn-primary" })</a>
                 </div>
             </div>
         </div>
