--- a/HotelManagement/Areas/Admin/Views/Login/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Login/Index.cshtml
@@ -22,7 +22,7 @@
     <div class="limiter">
         <div class="container-login100" style="background-image:url('@Url.Content("~/Assets/registration/img/bg-01.jpg")');">
             <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form">
+                <form class="login100-form validate-form" method = "post">
                     <span class="login100-form-title p-b-49">
                         Login
                     </span>
@@ -35,7 +35,7 @@
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
                         <span class="label-input100">Password</span>
-                        <input class="input100" type="password" name="pass" placeholder="Type your password">
+                        <input class="input100" type="password" name="password" placeholder="Type your password">
                         <i class="fa-solid fa-lock input-icon"></i>
                     </div>
 
@@ -45,10 +45,16 @@
                         </a>
                     </div>
 
+                    <div class="pt-4 text-center">
+                        <p class="text-danger">
+                            @TempData["error"]
+                        </p>
+                    </div>
+
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn">
+                            <button class="login100-form-btn" type="submit">
                                 Login
                             </button>
                         </div>
