--- a/HotelManagement/Assets/admin/css/Style.css
+++ b/HotelManagement/Assets/admin/css/Style.css
@@ -69,3 +69,161 @@
     border-top-right-radius: 8px !important;
     border-bottom-right-radius: 8px !important;
 }
+
+.add-btn {
+    display: block;
+    width: 125px;
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+}
+
+.add-room-form, .add-service-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999;
+    background-color: rgba(0,0,0,0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.room-container, .service-container {
+    width: 750px;
+    background-color: #fff;
+    display: flex;
+    max-width: calc(100% - 64px);
+    border-radius: 12px;
+    overflow: hidden;
+    animation: modalFaceIn ease .8s;
+}
+
+.booking-room, .booking-service {
+    position: relative;
+    display: flex;
+    /*align-items: center;*/
+    flex-direction: column;
+    padding: 48px 32px 24px;
+}
+
+    .booking-room .form-group, .booking-service .form-group {
+        width: 100%;
+    }
+
+    .booking-room > i, .booking-service > i {
+        position: absolute;
+        cursor: pointer;
+        padding: 16px 32px;
+        top: 0;
+        right: 0;
+    }
+
+    .booking-room h2, .booking-service h2 {
+        font-weight: 700;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .booking-room .form-group, .booking-service .form-group {
+        margin-bottom: 16px;
+    }
+
+        .booking-room .form-group .form-message, .booking-service .form-group .form-message {
+            font-size: 0.8rem;
+            font-weight: 100;
+        }
+
+    .booking-room input, .booking-service input {
+        padding: 8px 0;
+        border: none;
+        border-bottom: 2px solid #ccc;
+    }
+
+        .booking-room input:focus, .booking-service input:focus {
+            border-bottom: 2px solid #51a7fe;
+            outline: none;
+        }
+
+    .booking-room input, .date, .client, .booking-service input, .date, .client {
+        max-width: 100vw;
+        width: 100%;
+    }
+
+    .booking-room .date, .booking-service .date {
+        display: flex;
+        justify-content: space-between;
+    }
+
+        .booking-room .date input, .booking-service .date input {
+            width: 100%;
+        }
+
+        .booking-room .date .form-group, .booking-service .date .form-group {
+            width: 47%;
+        }
+
+    .booking-room .client, .booking-service .client {
+        display: flex;
+        justify-content: space-between;
+    }
+
+        .booking-room .client input, .booking-service .client input {
+            padding: 4px 0;
+        }
+
+    .booking-room .client-section, .booking-service .client-section {
+        width: 47%;
+    }
+
+        .booking-room .client-section label, .booking-service .client-section label {
+            display: none;
+        }
+
+    .booking-room form, .booking-service form {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .booking-room .submit-form-btn, .booking-service .submit-form-btn {
+        width: 200px;
+        text-align: center;
+        padding: 9px 0px;
+        background: #000;
+        color: #fff;
+        cursor: pointer;
+        margin: 1rem 0 0;
+    }
+
+.user-review {
+    display: flex;
+}
+
+.form-active {
+    display: block;
+}
+
+.form-group.invalid input {
+    border: 1px solid #f33a58;
+}
+
+.form-group.invalid .form-message {
+    color: #f33a58;
+    font-size: .75rem;
+}
+
+@keyframes modalFaceIn {
+    from {
+        opacity: 0;
+        transform: translateY(-150px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
